Bug 474532 - Git sidebar: error message after cancelling Open Commit
Summary: Git sidebar: error message after cancelling Open Commit
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 23.08.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-14 22:47 UTC by Frank Steinmetzger
Modified: 2023-09-15 06:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Steinmetzger 2023-09-14 22:47:38 UTC
STEPS TO REPRODUCE
1. Open a git-managed file in Kate
2. Open the Git sidebar
3. From the Tools button, select “Open Commit…”
4. Click on “Cancel”

OBSERVED RESULT
The log view shows a new Git error with “invalid hash”

So apparently even though I pressed cancel, Git is still called. When I input a valid commit ID and press Cancel, I still get the error message.

EXPECTED RESULT
Cancel means “do nothing”, so there should be no error message.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.27.7
KDE Frameworks Version: 5.109.0
Comment 1 Waqar Ahmed 2023-09-15 06:33:25 UTC
Git commit 3f0740a602948e5294455856955311e5e0726668 by Waqar Ahmed.
Committed on 15/09/2023 at 08:33.
Pushed by waqar into branch 'master'.

Git: Dont show error on cancelling open commit

M  +6    -3    addons/project/gitwidget.cpp

https://invent.kde.org/utilities/kate/-/commit/3f0740a602948e5294455856955311e5e0726668