Git: Dont show error on cancelling open commit

BUG: 474532